# grpcservers

./: CMakeLists.txt  README.md
eventlogrpcserverd/: CMakeLists.txt
eventlogrpcserverd/src/: eventlogrpcd.cpp
include/serv/: servfactory.h
script/: boost.cmake  odslib.cmake  openssl.cmake  postgresql.cmake
src/: servfactory.cpp  syslogrpcclient.cpp  syslogrpcclient.h  syslogrpcserver.cpp  syslogrpcserver.h  syslogservice.cpp  syslogservice.h
test/: CMakeLists.txt  testsyslogrunner.cpp  testsyslogrunner.h
